--- a/html/about.html
+++ b/html/about.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 <body>
-    
+    <h1>About Us</h1>
+    <p>
+        My name is ViVaKR and I created this site.
+    </p>
+
 </body>
 </html>
